--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,7 +15,7 @@
   "permissions": ["storage", "activeTab", "scripting", "tabs", "webNavigation"],
   "content_scripts": [
     {
-      "matches": ["http://*/*", "https://*/*", "<all_urls>"],
+      "matches": ["http://twitter.com/*", "https://twitter.com/*"],
       "js": ["contentScript.bundle.js"],
       "css": ["content.styles.css"]
     }
