--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
     "dotenv": "^16.0.3",
     "isomorphic-fetch": "^3.0.0",
     "react": "^18.2.0",
